@@ -34,7 +34,7 @@ import org.elasticsearch.transport.Netty4Plugin;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 /**
@@ -45,8 +45,12 @@ import java.util.concurrent.TimeUnit;
  * {@link MustachePlugin},
  * {@link ParentJoinPlugin}
  * plugins for the client. These plugins are all the required modules for Elasticsearch.
+ *
+ * @deprecated {@link TransportClient} is deprecated in favour of the High Level REST client and will
+ * be removed in Elasticsearch 8.0.
  */
 @SuppressWarnings({"unchecked","varargs"})
+@Deprecated
 public class PreBuiltTransportClient extends TransportClient {
 
     static {
@@ -82,13 +86,7 @@ public class PreBuiltTransportClient extends TransportClient {
     }
 
     private static final Collection<Class<? extends Plugin>> PRE_INSTALLED_PLUGINS =
-        Collections.unmodifiableList(
-            Arrays.asList(
-                Netty4Plugin.class,
-                ReindexPlugin.class,
-                PercolatorPlugin.class,
-                MustachePlugin.class,
-                ParentJoinPlugin.class));
+            List.of(Netty4Plugin.class, ReindexPlugin.class, PercolatorPlugin.class, MustachePlugin.class, ParentJoinPlugin.class);
 
     /**
      * Creates a new transport client with pre-installed plugins.
